possibly fixed dark mode?

--- a/css/spelling_bee.css
+++ b/css/spelling_bee.css
@@ -117,3 +117,9 @@
   margin-top: 310px;
   margin-left: 10px;
 }
+
+.dark-mode-text .button {
+  background-color: black;
+  border: solid 1px white;
+  color: white;
+}
